# apex-legends-obs-game

./: CMakeLists.txt  CreateResources.cmake  README.md
src/: apex-game.c
